# aur-packages

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: push-to-aur.yml  update-packages.yml  update.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
docs/: 01-quickstart.md  02-architecture.md  03-api-reference.md  04-development-guide.md  05-configuration.md  06-faq.md  README.md
scripts/: .gitignore  config.yaml  main.py  packages.yaml  pyproject.toml
scripts/cli/: cli.py
scripts/constants/: constants.py
scripts/core/: package_updater.py
scripts/docs/: README.md  downloader.md  type-guide.md
scripts/fetcher/: fetcher.py
scripts/loaders/: config_loader.py
scripts/parsers/: __init__.py  base_parser.py  navicat.py  navicat_premium_cs.py  qq.py
scripts/tests/fetcher/: test_fetcher.py
scripts/updater/: pkgbuild_editor.py
scripts/utils/: downloader.py  hash.py  url_utils.py  version_utils.py
