[project]
name = "aur-auto-update"
version = "0.1.0"
description = "AUR packages update tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "argparse>=1.4.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

# 配置 pytest 运行时的 Python 路径
[tool.pytest.ini_options]
pythonpath = [
    "."
]